--- a/box_bringup/bringup_elevation_mapping/config/grand_tour_parameters.yaml
+++ b/box_bringup/bringup_elevation_mapping/config/grand_tour_parameters.yaml
@@ -1,6 +1,6 @@
 #### Basic parameters ########
 resolution: 0.04                                # resolution in m.
-map_length: 8                                   # map's size in m.
+map_length: 16                                   # map's size in m.
 sensor_noise_factor: 0.05                       # point's noise is sensor_noise_factor*z^2 (z is distance from sensor).
 mahalanobis_thresh: 2.0                         # points outside this distance is outlier.
 outlier_variance: 0.01                          # if point is outlier, add this value to the cell.
@@ -41,7 +41,7 @@ overlap_clear_range_xy: 4.0                     # xy range [m] for clearing over
 overlap_clear_range_z: 2.0                      # z range [m] for clearing overlapped area. cells outside this range will be cleared. (used for multi floor setting)
 
 map_frame: 'odom'                               # The map frame where the odometry source uses.
-base_frame: 'base'                              # The robot's base frame. This frame will be a center of the map.
+base_frame: 'box_base'                              # The robot's base frame. This frame will be a center of the map.
 corrected_map_frame: 'odom_corrected'
 
 #### Feature toggles ########
