--- a/box_bringup/bringup_elevation_mapping/config/grand_tour_sensor_parameter.yaml
+++ b/box_bringup/bringup_elevation_mapping/config/grand_tour_sensor_parameter.yaml
@@ -32,27 +32,27 @@ publishers:
     basic_layers: ['inpaint']
     fps: 5.0
 
-#### Subscribers ########
+#### Subscribers ########  NEVER ADD EMPTY LINE HERE OTHERWISE CPP WILL FAIL!!
 subscribers:
-  heasi:
-    topic_name: /gt_box/hesai/points
-    data_type: pointcloud
-
-  livox:
-    topic_name: /gt_box/livox/points
-    data_type: pointcloud
-  
-  hdr_front:
+  hdr_front_ori:
     topic_name: /gt_box/hdr_front/image_raw/compressed
     camera_info_topic_name: /gt_box/hdr_front/camera_info
     data_type: image
-
-  hdr_left:
-    topic_name: /gt_box/hdr_left/image_raw/compressed
-    camera_info_topic_name: /gt_box/hdr_left/camera_info
+  hesai:
+    topic_name: /dlio/deskewed_point_cloud
+    data_type: pointcloud
+  livox:
+    topic_name: /gt_box/livox/lidar
+    data_type: pointcloud
+  hdr_front:
+    topic_name: /gt_box/hdr_front_rect/image_rect/compressed
+    camera_info_topic_name: /gt_box/hdr_front_rect/camera_info
     data_type: image
-    
+  hdr_left:
+    topic_name: /gt_box/hdr_left_rect/image_rect/compressed
+    camera_info_topic_name: /gt_box/hdr_left_rect/camera_info
+    data_type: image
   hdr_right:
-    topic_name: /gt_box/hdr_right/image_raw/compressed
-    camera_info_topic_name: /gt_box/hdr_right/camera_info
+    topic_name: /gt_box/hdr_right_rect/image_rect/compressed
+    camera_info_topic_name: /gt_box/hdr_right_rect/camera_info
     data_type: image
