--- a/box_utils/box_rviz/package.xml
+++ b/box_utils/box_rviz/package.xml
@@ -11,5 +11,6 @@
   <depend>rqt_rviz_wrapper</depend>
   <depend>box_throttling</depend>
   <depend>box_relaying</depend>
+  <depend>anymal_d_simple_description</depend>
 
 </package>
