restructure box_auto

--- a/box_utils/box_auto/CMakeLists.txt
+++ b/box_utils/box_auto/CMakeLists.txt
@@ -27,6 +27,10 @@ set(CATKIN_PACKAGE_DEPENDENCIES
   tf2_geometry_msgs
   rosbag
   interactive_markers
+  sensor_msgs
+  pcl_ros
+  pcl_conversions
+  rospy
   )
 
 # We pass the path of the `FindXYZ.cmake` files to `CMAKE_MODULE_PATH`
@@ -48,16 +52,24 @@ find_package(catkin REQUIRED COMPONENTS
   ${CATKIN_PACKAGE_DEPENDENCIES}
   )
 
+
+catkin_python_setup()
+
 catkin_package(
   INCLUDE_DIRS
   include
   LIBRARIES
   yaml-cpp
   ${PROJECT_NAME}
-  CATKIN_DEPENDS
+  CATKIN_DEPENDS 
   ${CATKIN_PACKAGE_DEPENDENCIES}
   DEPENDS
 )
+
+## Link libraries
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
+
 
 #Include directory#
 include_directories(${PROJECT_SOURCE_DIR})
@@ -89,9 +101,12 @@ target_link_libraries(${PROJECT_NAME}
 add_executable(post_processor_node
   src/post_processor_node.cpp)
 
+add_executable(filter_pointclouds
+  src/filter_pointclouds.cpp)
+
 add_executable(tf_processor_node
   src/tf_processor_node.cpp)
-
+  
 add_executable(merge
   src/merge.cpp)
 
@@ -113,6 +128,12 @@ target_link_libraries(merge
 ${catkin_LIBRARIES}
 ${gflags_LIBRARIES}
 ${GLOG_LIBRARIES}
+${PROJECT_NAME}
+)
+
+target_link_libraries(filter_pointclouds 
+${catkin_LIBRARIES}
+${PCL_LIBRARIES}
 ${PROJECT_NAME}
 )
 
@@ -140,3 +161,13 @@ RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 
+install(TARGETS filter_pointclouds
+RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
+
+
+# catkin_install_python(PROGRAMS 
+#   python/scripts/your_script.py
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
