--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -13,6 +13,9 @@
   <build_depend>python3</build_depend>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cmake_clang_tools</build_depend>
+  <depend>sensor_msgs</depend>
+  <depend>pcl_ros</depend>
+  <depend>pcl_conversions</depend>
   <depend>direct_lidar_inertial_odometry</depend>
   <depend>roscpp</depend>
   <depend>roslib</depend>
@@ -34,4 +37,9 @@
   <depend>tf_bag</depend>
   <depend>atn_position3_fuser</depend>
   <depend>ap20_driver_ros</depend>
+
+  <depend>python-setuptools</depend>
+  <depend>rospy</depend>
+
+
 </package>
