--- a/box_bringup/bringup_wavemap/config/both.yaml
+++ b/box_bringup/bringup_wavemap/config/both.yaml
@@ -103,7 +103,7 @@ inputs:
     topic_queue_length: 2
     max_wait_for_pose: { seconds: 0.1 }
   - type: pointcloud_topic
-    topic_name: /gt_box/livox/lidar
+    topic_name: /gt_box/livox/lidar_filtered
     topic_type: pointcloud_topic
     measurement_integrator_names: livox_mid360
     undistort_motion: false
