--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -12,6 +12,7 @@ x-common-config: &common-config
     QT_X11_NO_MITSHM: "1"
     XAUTHORITY: "/root/.docker.xauth"
     DISPLAY: "$DISPLAY"  
+    KLEINKRAM_ACTIVE: "False"  # Added this line
   deploy:
     resources:
       reservations:
@@ -40,7 +41,8 @@ x-ros2-common-config: &ros2-common-config
   environment:
     QT_X11_NO_MITSHM: "1"
     XAUTHORITY: "/root/.docker.xauth"
-    DISPLAY: "$DISPLAY"  
+    DISPLAY: "$DISPLAY"
+    KLEINKRAM_ACTIVE: "False"  # Added this line
   deploy:
     resources:
       reservations:
@@ -62,35 +64,35 @@ services:
   calibration:
     <<: *common-config
     container_name: calibration
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_calibration.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_calibration.py; exit $?"]
 
+
+  # minimal AP20: _robot.bag - _synced.bag
+  ap20_python_online_matcher:
+    <<: *common-config
+    container_name: ap20_python_online_matcher
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py; exit $?"]
 
   # minimal AP20: _robot.bag
   ap20_validate:
     <<: *common-config
     container_name: ap20_validate
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_validate.py"]
-  
-  # minimal AP20: _robot.bag - _synced.bag
-  ap20_python_online_matcher:
-    <<: *common-config
-    container_name: ap20_python_online_matcher
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_validate.py; exit $?"]
     depends_on:
-      ap20_validate:
+      ap20_python_online_matcher:
         condition: service_completed_successfully
 
   # minimal hesai.bag -> hesai_post_processed.bag
   hesai:
     <<: *common-config
     container_name: hesai
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py; exit $?"]
   
   # hesai_post_processed.bag & livox.bag -> hesai_filtered.bag , livox_filtered.bag
   filter_pointclouds: 
     <<: *common-config
     container_name: filter_pointclouds
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py; exit $?"]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -99,7 +101,7 @@ services:
   rectify:
     <<: *common-config
     container_name: rectify
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/rectify.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/rectify.py; exit $?"]
     depends_on:
       calibration:
         condition: service_completed_successfully
@@ -108,7 +110,7 @@ services:
   dlio:
     <<: *common-config
     container_name: dlio
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py; exit $?"]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -117,12 +119,14 @@ services:
 
   open3d_slam:
     <<: *common-config
-    container_name: dlio
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/open3d_slam.py"]
+    container_name: open3d_slam
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/open3d_slam.py; exit $?"]
     depends_on:
       hesai:
         condition: service_completed_successfully
       calibration:
+        condition: service_completed_successfully
+      dlio:
         condition: service_completed_successfully
 
 
@@ -130,7 +134,7 @@ services:
   merge_dlio_tf_static:
     <<: *common-config
     container_name: merge_dlio_tf_static
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/merge_dlio_tf_static.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/merge_dlio_tf_static.py; exit $?"]
     depends_on:
       dlio:
         condition: service_completed_successfully
@@ -140,7 +144,7 @@ services:
   graph_msf:
     <<: *common-config
     container_name: graph_msf
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/graph_msf.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/graph_msf.py; exit $?"]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -153,17 +157,17 @@ services:
   # wavemap:
   #   <<: *common-config
   #   container_name: dlio
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py"]
+  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py; exit $?"]
 
   # color_correction:
   #   <<: *common-config
   #   container_name: color_correction
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/color_correction.py"]
+  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/color_correction.py; exit $?"]
 
   # topic_freq:
   #   <<: *common-config
   #   container_name: topic_freq
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/topic_freq.py"]
+  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/topic_freq.py; exit $?"]
 
   #   depends_on:
   #     hesai:
@@ -178,12 +182,12 @@ services:
   # cpt7:
   #   <<: *common-config
   #   container_name: cpt7
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/cpt7/cpt7.py"]
+  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/cpt7/cpt7.py; exit $?"]
 
   # imu_timesync:
   #   <<: *common-config
   #   container_name: imu_timesync
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/imu_timesync.py"]
+  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/imu_timesync.py; exit $?"]
   #   depends_on:
   #     cpt7:
   #       condition: service_completed_successfully
