--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -64,13 +64,13 @@ services:
   hdr_timestamp_adjuster:
     <<: *common-config
     container_name: hdr_timestamp_adjuster
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/hdr_timestamp_adjuster.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/hdr_timestamp_adjuster.py"]
 
   # HDR _updated -> _calib 
   calibration:
     <<: *common-config
     container_name: calibration
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_calibration.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_calibration.py"]
     depends_on:
       hdr_timestamp_adjuster:
         condition: service_completed_successfully
@@ -79,13 +79,13 @@ services:
   ap20_python_online_matcher:
     <<: *common-config
     container_name: ap20_python_online_matcher
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py"]
 
   # minimal AP20: _robot.bag
   ap20_validate:
     <<: *common-config
     container_name: ap20_validate
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_validate.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_validate.py"]
     depends_on:
       ap20_python_online_matcher:
         condition: service_completed_successfully
@@ -94,33 +94,22 @@ services:
   hesai:
     <<: *common-config
     container_name: hesai
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py"]
   
   # hesai_post_processed.bag & livox.bag -> hesai_filtered.bag , livox_filtered.bag
   filter_pointclouds: 
     <<: *common-config
     container_name: filter_pointclouds
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py"]
     depends_on:
       hesai:
         condition: service_completed_successfully
-        
-  # minimal -> HDR _calib.bag _rect.bag  - ALPHA - .bag -> _rect.bag 
-  rectify:
-    <<: *common-config
-    container_name: rectify
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/rectify.py"]
-    depends_on:
-      calibration:
-        condition: service_completed_successfully
-      hdr_timestamp_adjuster:
-        condition: service_completed_successfully
-
+  
   # hesai.bag -> dlio.bag
   dlio:
     <<: *common-config
     container_name: dlio
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py"]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -130,7 +119,7 @@ services:
   open3d_slam:
     <<: *common-config
     container_name: open3d_slam
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/open3d_slam.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/open3d_slam.py"]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -144,7 +133,7 @@ services:
   merge_dlio_tf_static:
     <<: *common-config
     container_name: merge_dlio_tf_static
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/merge_dlio_tf_static.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/merge_dlio_tf_static.py"]
     depends_on:
       dlio:
         condition: service_completed_successfully
@@ -154,7 +143,7 @@ services:
   graph_msf:
     <<: *common-config
     container_name: graph_msf
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/graph_msf.py"]
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/graph_msf.py"]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -164,20 +153,41 @@ services:
         condition: service_completed_successfully
 
   # # hesai.bag -> dlio.bag
-  # wavemap:
-  #   <<: *common-config
-  #   container_name: dlio
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py"]
+  wavemap:
+    <<: *common-config
+    container_name: wavemap
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/wavemap.py"]
+    depends_on:
+      merge_dlio_tf_static:
+        condition: service_completed_successfully
 
-  # color_correction:
-  #   <<: *common-config
-  #   container_name: color_correction
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/color_correction.py"]
+        
+  color_correction:
+    <<: *common-config
+    container_name: color_correction
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/color_correction.py"]
+    depends_on:
+      calibration:
+        condition: service_completed_successfully
+
+
+          # minimal -> HDR _calib.bag _rect.bag  - ALPHA - color.bag -> _rect.bag 
+  rectify:
+    <<: *common-config
+    container_name: rectify
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/rectify.py"]
+    depends_on:
+      calibration:
+        condition: service_completed_successfully
+      hdr_timestamp_adjuster:
+        condition: service_completed_successfully
+      color_correction:
+        condition: service_completed_successfully
 
   # topic_freq:
   #   <<: *common-config
   #   container_name: topic_freq
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/topic_freq.py"]
+  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/topic_freq.py"]
 
   #   depends_on:
   #     hesai:
@@ -189,18 +199,16 @@ services:
   #     color_correction:
   #       condition: service_completed_successfully
   
-  # cpt7:
-  #   <<: *common-config
-  #   container_name: cpt7
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/cpt7/cpt7.py"]
+  cpt7:
+    <<: *common-config
+    container_name: cpt7
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/cpt7/cpt7.py"]
 
-  # imu_timesync:
-  #   <<: *common-config
-  #   container_name: imu_timesync
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE && python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/imu_timesync.py"]
-  #   depends_on:
-  #     cpt7:
-  #       condition: service_completed_successfully
-  #     create_tf_static:
-  #       condition: service_completed_successfully
+  imu_timesync:
+    <<: *common-config
+    container_name: imu_timesync
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/imu_timesync.py"]
+    depends_on:
+      calibration:
+        condition: service_completed_successfully
   
