fixed hdr integration

--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -3,7 +3,7 @@ x-common-config: &common-config
     context: "$HOME/git/grand_tour_box/box_utils/box_auto/docker"
     dockerfile: "$HOME/git/grand_tour_box/box_utils/box_auto/docker/box.Dockerfile"
     ssh:
-      default: "$HOME/.ssh/id_rsa_2"
+      default: "$HOME/.ssh/jonfrey_ws"
   image: rslethz/grand_tour_box:kleinkram
   runtime: nvidia
   # network_mode: host
@@ -33,8 +33,8 @@ x-ros2-common-config: &ros2-common-config
     context: "$HOME/git/grand_tour_box/box_utils/box_auto/docker"
     dockerfile: "$HOME/git/grand_tour_box/box_utils/box_auto/docker/box_ros2.Dockerfile"
     ssh:
-      default: "$HOME/.ssh/id_rsa_2"
-  image: rslethz/grand_tour_box_ros2
+      default: "$HOME/.ssh/jonfrey_ws"
+  image: rslethz/grand_tour_box:bridge
   runtime: nvidia
   # network_mode: host
   privileged: true
@@ -60,13 +60,35 @@ x-ros2-common-config: &ros2-common-config
 
 
 services:
-
+  # Input:
+  #   - _hdr.mcap
+  # Output:
+  #   - _hdr.bag
+  hdr_convert:
+    <<: *ros2-common-config
+    container_name: hdr_convert
+    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/mcap_to_rosbag.py"]
+  
+  # Input:
+  #   - _hdr.bag
+  # Output:
+  #   - _hdr_updated.bag
   hdr_timestamp_adjuster:
     <<: *common-config
     container_name: hdr_timestamp_adjuster
     command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/hdr_timestamp_adjuster.py"]
+    depends_on:
+      hdr_convert:
+        condition: service_completed_successfully
 
-  # HDR _updated -> _calib 
+  # Input:
+  #   - hdr_updated.bag
+  #   - alphasense.bag
+  # Output:
+  #   - alphasense_calib.bag
+  #   - hdr_calib.bag
+  #   - tf_static.bag
+  #   - tf_static_start_end.bag
   calibration:
     <<: *common-config
     container_name: calibration
@@ -75,13 +97,19 @@ services:
       hdr_timestamp_adjuster:
         condition: service_completed_successfully
 
-  # minimal AP20: _robot.bag - _synced.bag
+  # Input:
+  #   - ap20_aux.bag
+  # Output:
+  #   - ap20_synced.bag
   ap20_python_online_matcher:
     <<: *common-config
     container_name: ap20_python_online_matcher
     command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py"]
 
-  # minimal AP20: _robot.bag
+  # Input:
+  #   - ap20_synced.bag
+  # Output:
+  #   - ap20_synced.bag (validated)
   ap20_validate:
     <<: *common-config
     container_name: ap20_validate
@@ -90,13 +118,21 @@ services:
       ap20_python_online_matcher:
         condition: service_completed_successfully
 
-  # minimal hesai.bag -> hesai_post_processed.bag
+  # Input:
+  #   - hesai.bag
+  # Output:
+  #   - hesai_post_processed.bag
   hesai:
     <<: *common-config
     container_name: hesai
     command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py"]
   
-  # hesai_post_processed.bag & livox.bag -> hesai_filtered.bag , livox_filtered.bag
+  # Input:
+  #   - hesai_post_processed.bag
+  #   - livox.bag
+  # Output:
+  #   - hesai_filtered.bag
+  #   - livox_filtered.bag
   # filter_pointclouds: 
   #   <<: *common-config
   #   container_name: filter_pointclouds
@@ -105,7 +141,11 @@ services:
   #     hesai:
   #       condition: service_completed_successfully
   
-  # hesai.bag -> dlio.bag
+  # Input:
+  #   - hesai.bag
+  #   - tf_static.bag
+  # Output:
+  #   - dlio.bag
   dlio:
     <<: *common-config
     container_name: dlio
@@ -116,20 +156,26 @@ services:
       calibration:
         condition: service_completed_successfully
 
+  # Input:
+  #   - dlio.bag
+  #   - tf_static.bag
+  # Output:
+  #   - open3d_slam.bag
   # open3d_slam:
   #   <<: *common-config
   #   container_name: open3d_slam
   #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/open3d_slam.py"]
   #   depends_on:
-  #     hesai:
-  #       condition: service_completed_successfully
   #     calibration:
   #       condition: service_completed_successfully
   #     dlio:
   #       condition: service_completed_successfully
 
-
-  # this is needed for wavemap right now but should be replaced
+  # Input:
+  #   - dlio.bag
+  #   - tf_static.bag
+  # Output:
+  #   - dlio_tf_static.bag
   # merge_dlio_tf_static:
   #   <<: *common-config
   #   container_name: merge_dlio_tf_static
@@ -140,6 +186,12 @@ services:
   #     calibration:
   #       condition: service_completed_successfully
 
+  # Input:
+  #   - tf_static.bag
+  #   - ap20_robot.bag
+  #   - cpt7_ie_tc.bag
+  # Output:
+  #   - graph_msf.bag
   graph_msf:
     <<: *common-config
     container_name: graph_msf
@@ -152,7 +204,10 @@ services:
       ap20_python_online_matcher:
         condition: service_completed_successfully
 
-  # # hesai.bag -> dlio.bag
+  # Input:
+  #   - dlio_tf_static.bag
+  # Output:
+  #   - wavemap.bag
   # wavemap:
   #   <<: *common-config
   #   container_name: wavemap
@@ -161,7 +216,10 @@ services:
   #     merge_dlio_tf_static:
   #       condition: service_completed_successfully
 
-        
+  # Input:
+  #   - alphasense_calib.bag
+  # Output:
+  #   - alphasense_color.bag
   # color_correction:
   #   <<: *common-config
   #   container_name: color_correction
@@ -170,8 +228,12 @@ services:
   #     calibration:
   #       condition: service_completed_successfully
 
-
-  #         # minimal -> HDR _calib.bag _rect.bag  - ALPHA - color.bag -> _rect.bag 
+  # Input: 
+  #   - hdr_calib.bag
+  #   - alphasense_color.bag
+  # Output:
+  #   - hdr_rect.bag
+  #   - alphasense_rect.bag
   # rectify:
   #   <<: *common-config
   #   container_name: rectify
