--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -67,7 +67,7 @@ services:
   hdr_convert:
     <<: *ros2-common-config
     container_name: hdr_convert
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/mcap_to_rosbag.py"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/mcap_to_rosbag.py"]
   
   # Input:
   #   - _hdr.bag
@@ -76,7 +76,7 @@ services:
   hdr_timestamp_adjuster:
     <<: *common-config
     container_name: hdr_timestamp_adjuster
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/hdr_timestamp_adjuster.py"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/hdr_timestamp_adjuster.py"]
     depends_on:
       hdr_convert:
         condition: service_completed_successfully
@@ -92,7 +92,7 @@ services:
   calibration:
     <<: *common-config
     container_name: calibration
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_calibration.py"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/calibration/update_calibration.py"]
     depends_on:
       hdr_timestamp_adjuster:
         condition: service_completed_successfully
@@ -104,7 +104,7 @@ services:
   ap20_python_online_matcher:
     <<: *common-config
     container_name: ap20_python_online_matcher
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_python_online_matcher.py"]
 
   # Input:
   #   - ap20_synced.bag
@@ -113,7 +113,7 @@ services:
   ap20_validate:
     <<: *common-config
     container_name: ap20_validate
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_validate.py --skip_check"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/ap20/ap20_validate.py --skip_check"]
     depends_on:
       ap20_python_online_matcher:
         condition: service_completed_successfully
@@ -125,7 +125,7 @@ services:
   hesai:
     <<: *common-config
     container_name: hesai
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/hesai.py"]
   
   # Input:
   #   - hesai_post_processed.bag
@@ -136,7 +136,7 @@ services:
   # filter_pointclouds: 
   #   <<: *common-config
   #   container_name: filter_pointclouds
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py"]
   #   depends_on:
   #     hesai:
   #       condition: service_completed_successfully
@@ -149,7 +149,7 @@ services:
   dlio:
     <<: *common-config
     container_name: dlio
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/dlio.py"]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -164,7 +164,7 @@ services:
   # open3d_slam:
   #   <<: *common-config
   #   container_name: open3d_slam
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/open3d_slam.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/open3d_slam.py"]
   #   depends_on:
   #     calibration:
   #       condition: service_completed_successfully
@@ -179,7 +179,7 @@ services:
   # merge_dlio_tf_static:
   #   <<: *common-config
   #   container_name: merge_dlio_tf_static
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/merge_dlio_tf_static.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/general/merge_dlio_tf_static.py"]
   #   depends_on:
   #     dlio:
   #       condition: service_completed_successfully
@@ -195,7 +195,7 @@ services:
   graph_msf:
     <<: *common-config
     container_name: graph_msf
-    command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/graph_msf.py"]
+    command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/graph_msf.py"]
     depends_on:
       hesai:
         condition: service_completed_successfully
@@ -211,7 +211,7 @@ services:
   # wavemap:
   #   <<: *common-config
   #   container_name: wavemap
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/wavemap_create.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/application/wavemap_create.py"]
   #   depends_on:
   #     merge_dlio_tf_static:
   #       condition: service_completed_successfully
@@ -223,7 +223,7 @@ services:
   # color_correction:
   #   <<: *common-config
   #   container_name: color_correction
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/color_correction.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/color_correction.py"]
   #   depends_on:
   #     calibration:
   #       condition: service_completed_successfully
@@ -237,7 +237,7 @@ services:
   # rectify:
   #   <<: *common-config
   #   container_name: rectify
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/rectify.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera/rectify.py"]
   #   depends_on:
   #     calibration:
   #       condition: service_completed_successfully
@@ -249,7 +249,7 @@ services:
   # topic_freq:
   #   <<: *common-config
   #   container_name: topic_freq
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/topic_freq.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/topic_freq.py"]
 
   #   depends_on:
   #     hesai:
@@ -264,12 +264,12 @@ services:
   # cpt7:
   #   <<: *common-config
   #   container_name: cpt7
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/cpt7/cpt7.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/cpt7/cpt7.py"]
 
   # imu_timesync:
   #   <<: *common-config
   #   container_name: imu_timesync
-  #   command: ["sh", "-c", "export KLEINKRAM_ACTIVE=FALSE; export ARTIFACT_FOLDER=/mission_data; python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/imu_timesync.py"]
+  #   command: ["python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/verification/imu_timesync.py"]
   #   depends_on:
   #     calibration:
   #       condition: service_completed_successfully
