added small features and additonal helper scripts

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ box_utils/box_mission_report/reports*
 box_model/box_model/urdf/box/box.urdf
 box_bringup/bringup_open3d_slam/data/maps/*
 .idea/
+box_model/box_model/urdf/box/mesh/box_colored.dae
