--- a/box_bringup/bringup_elevation_mapping/config/grand_tour_sensor_parameter.yaml
+++ b/box_bringup/bringup_elevation_mapping/config/grand_tour_sensor_parameter.yaml
@@ -18,26 +18,22 @@ image_channel_fusions:
 
 publishers:
   elevation_map_raw:
-    layers: ['elevation', 'traversability', 'variance', 'rgb', 'upper_bound']
+    layers: ['elevation', 'traversability', 'variance', 'rgb', 'upper_bound', 'inpaint', 'smooth', 'min_filter']
     basic_layers: ['elevation', 'traversability']
     fps: 5.0
 
-  elevation_map_recordable:
-    layers: ['elevation', 'traversability', 'variance', 'rgb']
-    basic_layers: ['elevation', 'traversability']
-    fps: 2.0
+  # elevation_map_recordable:
+  #   layers: ['elevation', 'traversability', 'variance', 'rgb']
+  #   basic_layers: ['elevation', 'traversability']
+  #   fps: 2.0
 
-  filtered_elevation_map:
-    layers: ['inpaint', 'smooth', 'min_filter', 'upper_bound']
-    basic_layers: ['inpaint']
-    fps: 5.0
+  # filtered_elevation_map:
+  #   layers: ['inpaint', 'smooth', 'min_filter', 'upper_bound']
+  #   basic_layers: ['inpaint']
+  #   fps: 5.0
 
 #### Subscribers ########  NEVER ADD EMPTY LINE HERE OTHERWISE CPP WILL FAIL!!
 subscribers:
-  hdr_front_ori:
-    topic_name: /gt_box/hdr_front/image_raw/compressed
-    camera_info_topic_name: /gt_box/hdr_front/camera_info
-    data_type: image
   hesai:
     topic_name: /dlio/deskewed_point_cloud
     data_type: pointcloud
