--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -26,6 +26,7 @@
   <depend>tf2_geometry_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>interactive_markers</depend>
+  <depend>cv_bridge</depend>
   <depend>rosbag</depend>
   <depend>nav_msgs</depend>
   <depend>raw_image_pipeline_python</depend>
